kubernetes/apps/searxng/searxng/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
