kubernetes/apps/searxng/searxng/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  hostnames:
    - search.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: searxng
          namespace: searxng
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
